k8s/north/bases/nginx/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`queth.ledger-2.felixglasgow.com`) && PathPrefix(`/static`)
      kind: Rule
      services:
        - name: nginx-web
          port: 80

  tls:
    certResolver: letsencrypt
    #domains:
    #  - main: "*.robinbryce.me"
    #    #sans: "*.robinbryce.me"
    #
